WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
65394
[chromium] Only force slow scrolling for iframes under --force-compositing-mode
https://bugs.webkit.org/show_bug.cgi?id=65394
Summary
[chromium] Only force slow scrolling for iframes under --force-compositing-mode
Adrienne Walker
Reported
2011-07-29 14:37:03 PDT
[chromium] Only force slow scrolling for iframes under --force-compositing-mdoe
Attachments
Patch
(1.84 KB, patch)
2011-07-29 14:50 PDT
,
Adrienne Walker
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adrienne Walker
Comment 1
2011-07-29 14:50:04 PDT
Created
attachment 102400
[details]
Patch
Adrienne Walker
Comment 2
2011-07-29 14:52:22 PDT
(In reply to
comment #1
)
> Created an attachment (id=102400) [details] > Patch
Tested on Gmail and wikipedia with and without --force-compositing-mode. Verified that the only case in which slow scrolling is forced is gmail with --force-compositing-mode. Wikipedia with --force-compositing-mode now correctly goes down the fast scrolling path again.
James Robinson
Comment 3
2011-07-29 15:07:07 PDT
Comment on
attachment 102400
[details]
Patch Whooooooops. R=me
WebKit Review Bot
Comment 4
2011-07-29 16:11:27 PDT
Comment on
attachment 102400
[details]
Patch Clearing flags on attachment: 102400 Committed
r92030
: <
http://trac.webkit.org/changeset/92030
>
WebKit Review Bot
Comment 5
2011-07-29 16:11:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug