[chromium] Only force slow scrolling for iframes under --force-compositing-mode https://bugs.webkit.org/show_bug.cgi?id=65394

Reviewed by James Robinson.

The previous code introduced by r91591 made composited frames as well
as non-composited subframes go down the slow scrolling path.  Adjust
the check to use ownerElement to test for subframe and use
hasCompositedContent() which is a more correct test for compositing
than isEnclosedInCompositingLayer.

* page/FrameView.cpp:
(WebCore::FrameView::useSlowRepaints):


Canonical link: https://commits.webkit.org/81174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92030 268f45cc-cd09-0410-ab3c-d52691b4dbfc